force-app/main/default/objects/ADM_Assignment_Rule__c/ADM_Assignment_Rule__c.object-meta.xml
<CustomObject>
    <description>Used to populate the Assignment Rules on ADM_Work__c records</description>
    <label>Assignment Rule</label>
    <nameField>
        <label>Assignment Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>