force-app/main/default/objects/ADM_Assignment_Rule__c/fields/Additional_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Emails__c</fullName>
    <label>Followers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>