force-app/main/default/objects/ADM_Assignment_Rule__c/fields/Assignee_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignee_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Rules2</relationshipName>
    <type>Lookup</type>
</CustomField>