force-app/main/default/objects/ADM_Assignment_Rule__c/fields/Exception_Request_POC__c.field-meta.xml
<CustomField>
    <fullName>Exception_Request_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person assigned to exception records created from investigation records</description>
    <label>Exception Request POC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Rules5</relationshipName>
    <type>Lookup</type>
</CustomField>