force-app/main/default/objects/ADM_Assignment_Rule__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to designate if an assignment rule should be applied to work records.</description>
    <inlineHelpText>Used to designate if an assignment rule should be applied to work records.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>