force-app/main/default/objects/ADM_Assignment_Rule__c/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this field is empty it will be pre-populated with the Product Owner for the rule&#39;s scrum team.</inlineHelpText>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>