force-app/main/default/objects/ADM_Assignment_Rule__c/fields/QA_Assignment__c.field-meta.xml
<CustomField>
    <fullName>QA_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000lhZjMAI</relationshipName>
    <type>Lookup</type>
</CustomField>