force-app/main/default/objects/ADM_Assignment_Rule__c/fields/Scrum_Team_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Scrum_Team_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scrum Team</label>
    <referenceTo>ADM_Scrum_Team__c</referenceTo>
    <relationshipName>R00NT0000000lhZkMAI</relationshipName>
    <type>Lookup</type>
</CustomField>