force-app/main/default/objects/ADM_Assignment_Rule__c/fields/Senior_Management_POC_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Senior_Management_POC_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Senior Management POC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Rules4</relationshipName>
    <type>Lookup</type>
</CustomField>