force-app/main/default/objects/ADM_Assignment_Rule__c/fields/Sev_1_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Sev_1_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This user is assigned to Investigations with Severity Level 1</inlineHelpText>
    <label>Sev 1 Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Rules6</relationshipName>
    <type>Lookup</type>
</CustomField>