force-app/main/default/objects/ADM_Assignment_Rule__c/fields/Sev_2_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Sev_2_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This user is assigned to Investigations with a Severity Level of 2.</inlineHelpText>
    <label>Sev 2 Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Rules7</relationshipName>
    <type>Lookup</type>
</CustomField>