force-app/main/default/objects/ADM_Assignment_Rule__c/fields/Sev_3_Assignee__c.field-meta.xml
<CustomField>
    <fullName>Sev_3_Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This user is assigned to Investigations with Severity Level 3</inlineHelpText>
    <label>Sev 3 Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Rules8</relationshipName>
    <type>Lookup</type>
</CustomField>