force-app/main/default/objects/ADM_Assignment_Rule__c/fields/Systest_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Systest_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000lhZlMAI</relationshipName>
    <type>Lookup</type>
</CustomField>