force-app/main/default/objects/ADM_Assignment_Rule__c/fields/Tech_Writer_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Tech_Writer_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech Writer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00NT0000000lhZmMAI</relationshipName>
    <type>Lookup</type>
</CustomField>