force-app/main/default/objects/ADM_Assignment_Rule__c/fields/UE_Engineer__c.field-meta.xml
<CustomField>
    <fullName>UE_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UE Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assignment_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>