force-app/main/default/objects/ADM_Assignment_Rule__c/validationRules/ProductOwnerReq.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductOwnerReq</fullName>
    <active>true</active>
    <errorConditionFormula>Product_Owner__c == null</errorConditionFormula>
    <errorDisplayField>Product_Owner__c</errorDisplayField>
    <errorMessage>Product Owner is a required field</errorMessage>
</ValidationRule>