force-app/main/default/objects/ADM_Assignment_Rule__c/validationRules/ScrumTeamIsActive.validationRule-meta.xml
<ValidationRule>
    <fullName>ScrumTeamIsActive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( Inactive__c ), Inactive__c = false, Scrum_Team_Assignment__r.Active__c = false)</errorConditionFormula>
    <errorDisplayField>Scrum_Team_Assignment__c</errorDisplayField>
    <errorMessage>The scrum team you selected is not active.</errorMessage>
</ValidationRule>