force-app/main/default/objects/ADM_Assignment_Rule__c/validationRules/ScrumTeamRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ScrumTeamRequired</fullName>
    <active>true</active>
    <errorConditionFormula>Scrum_Team_Assignment__c == null</errorConditionFormula>
    <errorDisplayField>Scrum_Team_Assignment__c</errorDisplayField>
    <errorMessage>Scrum Team is a required field</errorMessage>
</ValidationRule>